<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:orientation="vertical"
        android:gravity="start">

        <TextView
            android:id="@+id/career_point_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/career_point_title"
            android:labelFor="@+id/career_point_text"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/career_point_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/career_point_text_view"
            android:inputType="text"/>

        <TextView
            android:id="@+id/career_point_location_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/career_point_text"
            android:text="@string/career_point_location_title"
            android:textSize="15sp"
            android:labelFor="@+id/career_point_location_text"/>

        <EditText
            android:id="@+id/career_point_location_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/career_point_location_text_view"
            android:inputType="text"/>

        <LinearLayout
            android:id="@+id/date_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/career_point_location_text"
            android:orientation="horizontal"
            android:gravity="start">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/career_point_start_title"
                android:labelFor="@+id/start_date_text"
                android:layout_marginEnd="8dp"/>

            <EditText
                android:id="@+id/start_date_text"
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:inputType="date"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/career_point_end_title"
                android:labelFor="@+id/end_date_text"/>

            <EditText
                android:id="@+id/end_date_text"
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:inputType="date"/>

        </LinearLayout>

        <Button
            android:id="@+id/add_career_position_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_gravity="end"
            android:layout_below="@+id/date_layout"
            android:text="@string/add_career_position_button_title"
            android:theme="@style/BeehiveButton" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/career_positions_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/save_cancel_layout"
            android:layout_below="@id/add_career_position_button">

        </android.support.v7.widget.RecyclerView>

        <LinearLayout
            android:id="@+id/save_cancel_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/cancel_button_text"
                android:layout_marginTop="8dp"
                android:theme="@style/BeehiveButton"/>

            <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_button_text"
                android:layout_marginTop="8dp"
                android:theme="@style/BeehiveButton"/>

        </LinearLayout>



    </RelativeLayout>

</android.support.v7.widget.CardView>