<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical"
        android:gravity="start">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/career_position_title"
            android:labelFor="@+id/career_position_text"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/career_position_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="start">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/career_point_start_title"
                android:labelFor="@+id/start_date_text"
                android:layout_marginEnd="8dp"/>

            <EditText
                android:id="@+id/start_date_text"
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:inputType="date"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/career_point_end_title"
                android:labelFor="@+id/end_date_text"/>

            <EditText
                android:id="@+id/end_date_text"
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:inputType="date"/>


        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_summary_title"
            android:labelFor="@+id/career_position_summary"
            android:textSize="15sp"
            android:layout_marginTop="8dp"/>

        <EditText
            android:id="@+id/career_position_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/cancel_button_text"
                android:layout_marginTop="8dp"
                android:theme="@style/BeehiveButton"/>

            <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_button_text"
                android:layout_marginTop="8dp"
                android:theme="@style/BeehiveButton"/>

        </LinearLayout>



    </LinearLayout>

</android.support.v7.widget.CardView>